--- a/Pertemuan5/DataGathering.ipynb
+++ b/Pertemuan5/DataGathering.ipynb
@@ -45,7 +45,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'kaggle' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kaggle datasets list -s \"goal leagues\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +427,7 @@
        "[522 rows x 19 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +623,7 @@
        "4              Leeds   15  16.879525  23.394953   4.131796  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +817,7 @@
        "4              Leeds   15  16.879525  23.394953   4.131796  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +1011,7 @@
        "521             Fulham    0  0.000000  0.000000   0.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1050,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1070,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1090,7 @@
        "19"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1437,7 @@
        "[522 rows x 19 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1430,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1730,7 +1748,7 @@
        "[522 rows x 16 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2054,7 +2072,7 @@
        "[522 rows x 17 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2066,7 +2084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2402,7 +2420,7 @@
        "[522 rows x 19 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2413,7 +2431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2814,7 +2832,7 @@
        "88                         Fulham    2  4.155025   7.808299   1.849482  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2826,7 +2844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -3227,7 +3245,7 @@
        "16    11  14.828548  24.998923   6.057656  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3239,7 +3257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -3452,7 +3470,7 @@
        "max     19.000000   19.130183   28.968234   18.323006  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3463,7 +3481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -3785,7 +3803,7 @@
        "max      18.323006  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3796,7 +3814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4118,7 +4136,7 @@
        "max      18.323006  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4129,7 +4147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -4530,7 +4548,7 @@
        "87    1.005990  10.010638   6.287275  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4542,7 +4560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -4555,7 +4573,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4566,7 +4584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -4579,7 +4597,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4590,7 +4608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -4637,7 +4655,7 @@
        "0      0      1        0      0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4648,7 +4666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -4694,7 +4712,7 @@
        "1  West Bromwich Albion"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4705,7 +4723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -5017,7 +5035,7 @@
        "[70 rows x 17 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
